<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/hostEmailLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/your_email_label"
            android:textSize="18dp" />

        <AutoCompleteTextView
            android:id="@+id/hostEmailAutoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="8"
            android:dropDownHeight="75dp"
            android:hint="@string/no_host_email_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/inviteGuestLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/invite_guest_label"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="8" >
            
            <AutoCompleteTextView
                android:id="@+id/guestEmailAutoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:dropDownHeight="75dp"
                android:hint="@string/guest_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/addGuestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/bracketed_plus_sign"
                style="?android:attr/buttonBarButtonStyle" />

            
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/guestsLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_marginTop="11dp"
            android:text="@string/guests_label"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/guestsLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="8"
            android:orientation="vertical" />
    </TableRow>

</TableLayout>