<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true" >

    <ScrollView
        android:id="@+id/reservationScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="110dp"
            android:paddingLeft="110dp"
            android:paddingRight="110dp"
            android:paddingTop="50dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:minHeight="534dp"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:background="@color/weak_blue" >

                        <TextView
                            android:id="@+id/titleBarTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="Mon, Apr 14, 2012, 12:00 pm - Mon, Apr 14, 2012, 01:00 pm"
                            android:textColor="@color/white"
                            android:textSize="32dp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp" >

                        <EditText
                            android:id="@+id/titleEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/untitled_event_hint"
                            android:lines="1"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/dateTimePickersLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" >

                            <Button
                                android:id="@+id/startingDateButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Mon, Apr 14, 2012" />

                            <Button
                                android:id="@+id/startingTimeButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="12:00 pm" />

                            <TextView
                                android:id="@+id/toTextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.15"
                                android:gravity="center_horizontal"
                                android:text="@string/to"
                                android:textSize="18dp" />

                            <Button
                                android:id="@+id/endingDateButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Mon, Apr 14, 2012" />

                            <Button
                                android:id="@+id/endingTimeButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="01:00 pm" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" >

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical" >

                                <LinearLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/descriptionLabelTextView"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/description_label"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/descriptionEditText"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="3"
                                        android:hint="@string/no_description_hint"
                                        android:inputType="textMultiLine"
                                        android:maxLines="10" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/locationLabelTextView"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="11dp"
                                        android:layout_weight="1"
                                        android:text="@string/location_label"
                                        android:textSize="18dp" />

                                    <RelativeLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="3"
                                        android:orientation="vertical" >

                                        <TextView
                                            android:id="@+id/noAvailableRoomsTextView"
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_horizontal"
                                            android:layout_marginTop="11dp"
                                            android:layout_alignParentTop="true"
                                            android:text="@string/no_available_rooms"
                                            android:textSize="18dp" />

                                        <RadioGroup
                                            android:id="@+id/locationRadioGroup"
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="4dp"
                                            android:layout_alignParentTop="true" />
                                    </RelativeLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="0.15" />

                            <fragment
                                android:id="@+id/guestFragment"
                                android:name="edu.cmu.sv.arm.GuestFragment"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>